# Stellar-agent

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  KNOWN_ISSUES.md  README.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  deny.yml
agents/: package-lock.json  shared.ts
agents/buyer/: index.ts
agents/registry/: server.ts
agents/seller-copywriter/: .env.example  index.ts
agents/seller-namer/: index.ts
agents/seller-researcher/: index.ts  package.json
agents/seller-webbuilder/: index.ts
contracts/agent-identity/: mutation-test.sh
contracts/agent-identity/src/: lib.rs  test.rs
contracts/agent-identity/test_snapshots/test/: deregister_allows_same_owner_to_re_register.1.json  deregister_rejects_non_owner.1.json  deregister_removes_agent_and_owner_lookup.1.json  (+8 more)
contracts/agentic-commerce/: mutation-test.sh
contracts/agentic-commerce/src/: lib.rs  test.rs
dashboard/: package-lock.json  package.json  server.ts
dashboard/lib/: auth.ts  config.ts  discovery.ts
dashboard/public/: app.js  index.html  style.css
demo/: .env.example  buyer-agent.ts  cancel-flow.ts  lifecycle.ts  package-lock.json  package.json  seller-agent.ts  simulate.ts
docs/: MAINNET_MIGRATION.md  api.md  architecture.md  sdk.md
landing/: app.js  index.html  style.css
landing/api/: contract-addresses.json
sdk/: LICENSE  package-lock.json  package.json  tsconfig.browser.json  tsconfig.json
sdk/src/: browser.ts  commerce.ts  identity.ts  index.ts  marcFetch.ts  marcPaywall.ts  marcPaywallCore.ts  marcPaywallFastify.ts  marcPaywallNodeHttp.ts  types.ts
